# SportyGroupTask

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
question1/: DECISIONS.md  README.md  config_resolver_main.py
question1/configs/: base.yml  broken.yml  production.yml
question1/lib/: exceptions.py  logging_utils.py  models.py  utils.py
question1/tests/: test_config_resolver.py
question2/: DECISIONS.md  README.md  executor_main.py
question2/lib/: exceptions.py  logging_utils.py  models.py  registry.py  tasks.py
question2/tests/: test_executor.py
